--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,9 @@
         "phpunit/phpunit": "^6.2",
         "mockery/mockery": "^1.2",
         "topthink/think-migration": "^3.0.0"
+    },
+    "conflict": {
+        "topthink/think-queue": "*"
     }
+
 }
