--- a/composer.json
+++ b/composer.json
@@ -1,51 +1,24 @@
 {
-    "name": "love-dj/think-queue-amqp",
-    "description": "The ThinkPHP6 Queue Package",
-    "authors": [
-        {
-            "name": "心情",
-            "email": "myhsj@qq.com"
-        }
-    ],
-    "license": "Apache-2.0",
-    "autoload": {
-        "psr-4": {
-            "think\\": "src"
-        },
-        "files": [
-            "src/common.php"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "think\\test\\queue\\": "tests"
-        }
-    },
-    "minimum-stability": "dev",
-    "require": {
-        "ext-json": "*",
-        "php-amqplib/php-amqplib": "^2.12.1",
-        "topthink/framework": "^6.0",
-        "symfony/process": "^4.2",
-        "nesbot/carbon": "^2.16"
-    },
-    "extra": {
-        "think": {
-            "services": [
-                "think\\queue\\Service"
-            ],
-            "config": {
-                "queue": "src/config.php"
-            }
-        }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^6.2",
-        "mockery/mockery": "^1.2",
-        "topthink/think-migration": "^3.0.0"
-    },
-    "conflict": {
-        "topthink/think-queue": "*"
+  "name": "love-dj/think-queue-amqp",
+  "description": "amqp(RabbitMQ) connector for think-queue",
+  "license": "MIT",
+  "type": "think-extend",
+  "keywords": [
+    "think-queue",
+    "rabbitmq",
+    "message",
+    "queue"
+  ],
+  "require": {
+    "php": ">=7.2.5",
+    "topthink/think-queue": "^3.0",
+    "php-amqplib/php-amqplib": "^3.0"
+  },
+  "require-dev": {
+  },
+  "autoload": {
+    "psr-4": {
+      "think\\queue\\": "src"
     }
-
+  }
 }
